feat: update fonts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import Layout from "../layouts/Layout.astro";
           class="text-[#FFE5A2] absolute -right-[80px]"
         />
         <div class="absolute left-0 right-0 bottom-0 p-10">
-          <h2 class="text-2xl mb-3 font-lobster">Web Development Projects</h2>
+          <h2 class="text-2xl mb-3 font-manrope">Web Development Projects</h2>
           <p>
             A showcase of innovative web applications focused on user
             experience, functionality, and performance.
@@ -60,7 +60,7 @@ import Layout from "../layouts/Layout.astro";
           transition:name="contact"
           class="absolute left-0 right-0 bottom-0 p-10"
         >
-          <h2 class="text-2xl mb-3 font-lobster">Get in Touch</h2>
+          <h2 class="text-2xl mb-3 font-manrope">Get in Touch</h2>
           <p>
             Reach out via email or connect with me on social media. I'd love to
             hear from you!
@@ -78,7 +78,7 @@ import Layout from "../layouts/Layout.astro";
           class="text-[#FFE5A2] absolute -right-[80px]"
         />
         <article class="absolute left-0 right-0 bottom-0 p-10">
-          <h2 class="text-2xl mb-3 font-lobster">Hobbies & Interests</h2>
+          <h2 class="text-2xl mb-3 font-manrope">Hobbies & Interests</h2>
 
           <p class="text-sm mb-3">
             When I'm not coding, I love exploring my creative and active side!
