fix: responsive mode of the Hobbies section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="lg:flex lg:space-x-5 lg:h-[40%]">
       <a
         href="/contact"
-        class="block lg:w-[30%] bg-[#DFC8FD] h-[330px] rounded-[36px] overflow-hidden relative"
+        class="block lg:w-[30%] bg-[#DFC8FD] h-[330px] rounded-[30px] overflow-hidden relative"
       >
         <Icon
           name="material-symbols-light:cloud"
@@ -70,7 +70,7 @@ import Layout from "../layouts/Layout.astro";
       <a
         href="/hobbies-interests"
         transition:name="hobbies-interests"
-        class="lg:w-[70%] h-[330px] bg-[#F3F3F3] rounded-[30px] overflow-hidden relative"
+        class="lg:w-[70%] sm:h-[330px] h-[550px] bg-[#F3F3F3] rounded-[30px] overflow-hidden relative block"
       >
         <Icon
           name="material-symbols-light:signpost-rounded"
