--- a/src/pages/hobbies-interests.astro
+++ b/src/pages/hobbies-interests.astro
@@ -25,7 +25,7 @@ const images = [
 ];
 ---
 
-<Layout>
+<Layout pageTitle="Hobbies & Interests">
   <div
     transition:name="hobbies-interests"
     class="max-w-[1250px] bg-[#F3F3F3] mx-auto h-full rounded-[62px] flex
