--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 import me from "../assets/rafael-meza.jpg";
 ---
 
-<Layout>
+<Layout pageTitle="Get in touch">
   <div
     transition:name="contact"
     class="max-w-[1250px] px-4 py-16 bg-[#FFF3EA] mx-auto min-h-full rounded-[62px] flex justify-center items-center relative w-full"
