--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -25,7 +25,7 @@ const images = [
 ];
 ---
 
-<Layout>
+<Layout pageTitle="Projects">
   <div
     transition:name="projects"
     class="max-w-[1250px] bg-[#FCCF5A] mx-auto h-full rounded-[62px] flex
