--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
 import { Icon } from "astro-icon/components";
 import Layout from "../layouts/Layout.astro";
+import Container from "../components/Container.astro";
 ---
 
 <Layout>
-  <div class="p-3 md:p-6 lg:p-9 min-h-screen flex w-full">
-    <main
+  <Container>
+    <div
       class="p-4 md:p-[40px] lg:p-[80px] min-h-[790px] max-w-[1250px] mx-auto bg-white rounded-[48px] w-full"
     >
       <div class="lg:flex lg:space-x-5 lg:mb-5 lg:h-[60%]">
@@ -71,7 +72,7 @@ import Layout from "../layouts/Layout.astro";
         <a
           href="/hobbies-interests"
           transition:name="hobbies-interests"
-          class="lg:w-[70%] h-[400px] min-h-[250px] lg:h-auto bg-[#F3F3F3] rounded-[30px] overflow-hidden relative block"
+          class="lg:w-[70%] min-h-[430px] sm:min-h-[360px] md:min-h-[300px] lg:min-h-0 bg-[#F3F3F3] rounded-[30px] overflow-hidden relative block"
         >
           <Icon
             name="material-symbols-light:signpost-rounded"
@@ -102,6 +103,6 @@ import Layout from "../layouts/Layout.astro";
           </article>
         </a>
       </div>
-    </main>
-  </div>
+    </div>
+  </Container>
 </Layout>
