feat: improve some elements
- Add page-load directive to ensure slider works as expected
- Upgrade astro version
- Update rounded CSS directive to make UI more friendly

--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -8,7 +8,7 @@ import Container from "../components/Container.astro";
   <Container>
     <div
       transition:name="about"
-      class="max-w-[1250px] p-4 bg-[#704EE7] w-full mx-auto rounded-[62px] flex justify-center items-center relative"
+      class="max-w-[1250px] p-4 bg-[#704EE7] w-full mx-auto rounded-[40px] lg:rounded-[52px] flex justify-center items-center relative"
     >
       <a
         href="/"
