--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,13 +7,13 @@ import Container from "../components/Container.astro";
 <Layout>
   <Container>
     <div
-      class="p-4 md:p-[40px] lg:p-[80px] min-h-[790px] max-w-[1250px] mx-auto bg-white rounded-[48px] w-full"
+      class="p-4 md:p-[40px] lg:p-[80px] min-h-[790px] max-w-[1250px] mx-auto bg-white rounded-[40px] lg:rounded-[52px] w-full"
     >
       <div class="lg:flex lg:space-x-5 lg:mb-5 lg:h-[60%]">
         <a
           transition:name="about"
           href="/about-me"
-          class="lg:w-[60%] h-[330px] lg:h-auto w-full bg-[#704EE7] rounded-[30px] flex justify-center items-center"
+          class="lg:w-[60%] h-[330px] lg:h-auto w-full bg-[#704EE7] rounded-[24px] flex justify-center items-center"
         >
           <div class="flex items-center space-x-5 p-4">
             <Icon
@@ -32,7 +32,7 @@ import Container from "../components/Container.astro";
         <a
           transition:name="projects"
           href="/projects"
-          class="lg:w-[40%] block h-[330px] lg:h-auto w-full bg-[#FCCF5A] rounded-[30px] relative overflow-hidden p-9"
+          class="lg:w-[40%] block h-[330px] lg:h-auto w-full bg-[#FCCF5A] rounded-[24px] relative overflow-hidden p-9"
         >
           <Icon
             name="material-symbols-light:award-star-rounded"
@@ -51,7 +51,7 @@ import Container from "../components/Container.astro";
       <div class="lg:flex lg:space-x-5 lg:h-[40%]">
         <a
           href="/contact"
-          class="block lg:w-[30%] h-[330px] lg:h-auto bg-[#DFC8FD] rounded-[30px] overflow-hidden relative"
+          class="block lg:w-[30%] h-[330px] lg:h-auto bg-[#DFC8FD] rounded-[24px] overflow-hidden relative"
         >
           <Icon
             name="material-symbols-light:cloud"
@@ -72,7 +72,7 @@ import Container from "../components/Container.astro";
         <a
           href="/hobbies-interests"
           transition:name="hobbies-interests"
-          class="lg:w-[70%] min-h-[430px] sm:min-h-[360px] md:min-h-[300px] lg:min-h-0 bg-[#F3F3F3] rounded-[30px] overflow-hidden relative block"
+          class="lg:w-[70%] min-h-[430px] sm:min-h-[360px] md:min-h-[300px] lg:min-h-0 bg-[#F3F3F3] rounded-[24px] overflow-hidden relative block"
         >
           <Icon
             name="material-symbols-light:signpost-rounded"
