--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,7 +10,7 @@ import Container from "../components/Container.astro";
   <Container>
     <div
       transition:name="contact"
-      class="max-w-[1250px] px-4 py-16 bg-[#FFF3EA] mx-auto rounded-[62px] flex justify-center items-center relative w-full"
+      class="max-w-[1250px] px-4 py-16 bg-[#FFF3EA] mx-auto rounded-[40px] lg:rounded-[52px] flex justify-center items-center relative w-full"
     >
       <a
         href="/"
