feat: move color values to Tailwind config file

--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -8,11 +8,11 @@ import Container from "../components/Container.astro";
   <Container>
     <div
       transition:name="about"
-      class="max-w-[1250px] p-4 bg-[#704EE7] w-full mx-auto rounded-[40px] lg:rounded-[52px] flex justify-center items-center relative"
+      class="max-w-[1250px] p-4 bg-purple w-full mx-auto rounded-[40px] lg:rounded-[52px] flex justify-center items-center relative"
     >
       <a
         href="/"
-        class="w-[62px] h-[62px] flex items-center justify-center text-white top-[30px] right-[30px] bg-[#FCCF5A] absolute rounded-full"
+        class="w-[62px] h-[62px] flex items-center justify-center text-white top-[30px] right-[30px] bg-orange absolute rounded-full"
       >
         <Icon
           name="material-symbols-light:arrow-back-rounded"
@@ -25,10 +25,10 @@ import Container from "../components/Container.astro";
           <Icon
             name="material-symbols-light:award-star-rounded"
             size="96"
-            class="text-[#FCCF5A]"
+            class="text-orange"
           />
           <h1
-            class="text-[#FCCF5A] font-nixie-one"
+            class="text-orange font-nixie-one"
             style="font-size:clamp(18px, 4vw + 1rem, 60px)"
           >
             RAFAEL MEZA
