--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,7 +14,7 @@ import Container from "../components/Container.astro";
     >
       <a
         href="/"
-        class="absolute flex items-center justify-center rounded-full w-[52px] h-[52px] top-[30px] text-[#FCCF5A] bg-[#704EE7] right-[30px]"
+        class="absolute flex items-center justify-center rounded-full w-[52px] h-[52px] top-[30px] text-orange bg-purple right-[30px]"
       >
         <Icon
           name="material-symbols-light:arrow-back-rounded"
@@ -28,10 +28,10 @@ import Container from "../components/Container.astro";
             <Icon
               name="material-symbols-light:award-star-rounded"
               size="96"
-              class="text-[#FCCF5A]"
+              class="text-orange"
             />
             <h1
-              class="text-[#FCCF5A] font-nixie-one"
+              class="text-orange font-nixie-one"
               style="font-size:clamp(18px, 4vw + 1rem, 60px)"
             >
               RAFAEL MEZA
@@ -53,17 +53,17 @@ import Container from "../components/Container.astro";
             target="_blank"
             rel="noreferrer"
             title="Email | Rafael Meza | rafaelmezac@gmail.com"
-            class="overflow-hidden aspect-square flex items-center justify-center rounded-[30px] bg-[#704EE7] relative w-full"
+            class="overflow-hidden aspect-square flex items-center justify-center rounded-[30px] bg-purple relative w-full"
           >
             <Icon
               name="material-symbols-light:mark-email-read-outline"
               size="48"
-              class="text-[#FCCF5A] absolute left-2 bottom-2"
+              class="text-orange absolute left-2 bottom-2"
             />
             <Icon
               name="material-symbols-light:arrow-back-rounded"
               size="48"
-              class="text-[#FCCF5A] absolute right-0 top-0 rotate-[135deg]"
+              class="text-orange absolute right-0 top-0 rotate-[135deg]"
             />
           </a>
           <a
@@ -71,17 +71,17 @@ import Container from "../components/Container.astro";
             target="_blank"
             rel="noreferrer"
             title="Github | Rafael Meza | raffo1234"
-            class="aspect-square rounded-[30px] bg-[#704EE7] relative w-full items-center justify-between overflow-hidden"
+            class="aspect-square rounded-[30px] bg-purple relative w-full items-center justify-between overflow-hidden"
           >
             <Icon
               name="material-symbols-light:code-blocks-outline"
               size="48"
-              class="text-[#FCCF5A] absolute left-3 bottom-3"
+              class="text-orange absolute left-3 bottom-3"
             />
             <Icon
               name="material-symbols-light:arrow-back-rounded"
               size="48"
-              class="text-[#FCCF5A] absolute right-0 top-0 rotate-[135deg]"
+              class="text-orange absolute right-0 top-0 rotate-[135deg]"
             />
           </a>
           <a
@@ -89,17 +89,17 @@ import Container from "../components/Container.astro";
             title="Whatsapp | Rafael Meza | +51 997258592"
             target="_blank"
             rel="noreferrer"
-            class="aspect-square rounded-[30px] bg-[#704EE7] relative w-full items-center justify-between overflow-hidden"
+            class="aspect-square rounded-[30px] bg-purple relative w-full items-center justify-between overflow-hidden"
           >
             <Icon
               name="material-symbols-light:mark-unread-chat-alt-outline"
               size="48"
-              class="text-[#FCCF5A] absolute left-3 bottom-3"
+              class="text-orange absolute left-3 bottom-3"
             />
             <Icon
               name="material-symbols-light:arrow-back-rounded"
               size="48"
-              class="text-[#FCCF5A] absolute right-0 top-0 rotate-[135deg]"
+              class="text-orange absolute right-0 top-0 rotate-[135deg]"
             />
           </a>
           <div
