--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,16 +13,16 @@ import Container from "../components/Container.astro";
         <a
           transition:name="about"
           href="/about-me"
-          class="lg:w-[60%] h-[330px] lg:h-auto w-full bg-[#704EE7] rounded-[24px] flex justify-center items-center"
+          class="lg:w-[60%] h-[330px] lg:h-auto w-full bg-purple rounded-[24px] flex justify-center items-center"
         >
           <div class="flex items-center space-x-5 p-4">
             <Icon
               name="material-symbols-light:award-star-rounded"
               size="96"
-              class="text-[#FCCF5A]"
+              class="text-orange"
             />
             <h1
-              class="text-[#FCCF5A] font-nixie-one"
+              class="text-orange font-nixie-one"
               style="font-size:clamp(18px, 4vw + 1rem, 50px)"
             >
               RAFAEL MEZA
@@ -32,12 +32,12 @@ import Container from "../components/Container.astro";
         <a
           transition:name="projects"
           href="/projects"
-          class="lg:w-[40%] block h-[330px] lg:h-auto w-full bg-[#FCCF5A] rounded-[24px] relative overflow-hidden p-9"
+          class="lg:w-[40%] block h-[330px] lg:h-auto w-full bg-orange rounded-[24px] relative overflow-hidden p-9"
         >
           <Icon
             name="material-symbols-light:award-star-rounded"
             size="196"
-            class="text-[#FFE5A2] absolute -right-[80px]"
+            class="text-light-orange absolute -right-[80px]"
           />
           <article class="absolute left-0 right-0 bottom-0 p-8">
             <h2 class="text-2xl mb-3 font-manrope">Web Development Projects</h2>
@@ -51,12 +51,12 @@ import Container from "../components/Container.astro";
       <div class="lg:flex lg:space-x-5 lg:h-[40%]">
         <a
           href="/contact"
-          class="block lg:w-[30%] h-[330px] lg:h-auto bg-[#DFC8FD] rounded-[24px] overflow-hidden relative"
+          class="block lg:w-[30%] h-[330px] lg:h-auto bg-pink rounded-[24px] overflow-hidden relative"
         >
           <Icon
             name="material-symbols-light:cloud"
             size="196"
-            class="text-[#FFE5A2] absolute -right-[80px]"
+            class="text-light-orange absolute -right-[80px]"
           />
           <article
             transition:name="contact"
@@ -72,12 +72,12 @@ import Container from "../components/Container.astro";
         <a
           href="/hobbies-interests"
           transition:name="hobbies-interests"
-          class="lg:w-[70%] min-h-[430px] sm:min-h-[360px] md:min-h-[300px] lg:min-h-0 bg-[#F3F3F3] rounded-[24px] overflow-hidden relative block"
+          class="lg:w-[70%] min-h-[430px] sm:min-h-[360px] md:min-h-[300px] lg:min-h-0 bglight-gray rounded-[24px] overflow-hidden relative block"
         >
           <Icon
             name="material-symbols-light:signpost-rounded"
             size="196"
-            class="text-[#FFE5A2] absolute -right-[80px]"
+            class="text-light-orange absolute -right-[80px]"
           />
           <article class="absolute left-0 right-0 bottom-0 p-8">
             <h2 class="text-2xl mb-3 font-manrope">Hobbies & Interests</h2>
