--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -30,16 +30,16 @@ const images = [
   <Container>
     <div
       transition:name="projects"
-      class="w-full max-w-[1250px] bg-[#FCCF5A] mx-auto rounded-[40px] lg:rounded-[52px] flex relative"
+      class="w-full max-w-[1250px] bg-orange mx-auto rounded-[40px] lg:rounded-[52px] flex relative"
     >
       <a
         href="/"
-        class="w-[62px] flex items-center justify-center h-[62px] absolute rounded-full top-[30px] z-20 right-[30px] bg-[#704EE7]"
+        class="w-[62px] flex items-center justify-center h-[62px] absolute rounded-full top-[30px] z-20 right-[30px] bg-purple"
       >
         <Icon
           name="material-symbols-light:arrow-insert-rounded"
           size="62"
-          class="text-[#FCCF5A] -rotate-90"
+          class="text-orange -rotate-90"
         />
       </a>
       {
